create cron jobs for inventory sync

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/schedule": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/date-fns": "^2.5.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
